:bug::lipstick: Add overflow hidden to welcome wrapper

--- a/app/assets/stylesheets/components/_welcome_overlay.sass
+++ b/app/assets/stylesheets/components/_welcome_overlay.sass
@@ -24,6 +24,7 @@
     +flexbox
     +alignitems-center
     +justifycontent-center
+    overflow: hidden
 
     .home-bg
         height: 100vh
